@@ -42,7 +42,20 @@
    &lt;script&gt;
        that does something really nasty
    &lt;/script&gt;
-
+</pre>
+</div>
+<div class="system-message">
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 13)</p>
+<p>&quot;csv-table&quot; directive disabled.</p>
+<pre class="literal-block">
+.. csv-table:: :file: /etc/passwd
+</pre>
+</div>
+<div class="system-message">
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 14)</p>
+<p>&quot;csv-table&quot; directive disabled.</p>
+<pre class="literal-block">
+.. csv-table:: :url: file:///etc/passwd
 </pre>
 </div>
 </div>
